# Langgraph-Telegram-Bot-Agent

./: .coverage  .coveragerc  .gitignore  README.md  alembic.ini  dockerignore  postgress_data.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3840f3c7a13b_init.py  e944e308b13b_add_chat_messages_table.py  ffed19ecaf20_add_chat_messages_table.py
monitoring/: docker-compose.yml  otel-collector-config.yml  prometheus.yml
monitoring/grafana/dashboards/: karan_bot_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/app/: constants.py  db.py  di.py  main.py  metrics.py
src/app/adapters/: image_openai.py  llm_openai.py  memory_postgres.py  memory_redis.py  summarizer.py  telegram_handlers.py  tts_elevenlabs.py  vector_chroma.py
src/app/config/: logging.py  settings.py
src/app/core/: ports.py
src/app/entrypoints/: telegram_bot.py
src/app/telemetry/: __init__.py  otel.py
src/app/utils/: timing.py
src/app/workflows/: karan_graph.py
tests/: conftest.py
tests/integration/: test_graph_smoke.py
tests/unit/: test_di_swapping.py  test_image_openai_adapter.py  test_karan_graph_paths.py  test_llm_openai_wrapper.py  test_logging.py  test_metrics_helpers.py  test_settings.py  test_summarizer.py  test_telegram_handlers.py  test_telegram_handlers_internals.py  test_tts_elevenlabs_adapter.py  test_vector_chroma_adapter.py
